# PhysicsSimulation

./: .gitignore  CMakeLists.txt  README.md  SimFis.ncb  SimFis.sln  SimFis.vcproj  SimFis.vcxproj  SimFis.vcxproj.filters  UpgradeLog.XML  UpgradeLog.htm  cloth.cpp  cloth.h  constraint.cpp  cube.cpp  euler.cpp  forcegenerator.cpp  graphics.cpp  graphics.h  gravity.cpp  gravity.h  integrator.cpp  main.cpp  manipulator.cpp  manipulator.h  medium.cpp  medium.h  particle.cpp  particle.h  particlegenerator.cpp  particlegenerator.h  plane.cpp  plane.h  simulation.cpp  spring.cpp  verlet.cpp  verlet.h
.github/: copilot-instructions.md
Backup/: SimFis.sln
Debug/: BuildLog.htm  CL.read.1.tlog  CL.write.1.tlog  SimFis.ilk  SimFis.lastbuildstate  cl.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  particle.obj.enc  vc110.idb  vc120.idb
Debug/SimFis.tlog/: CL.read.1.tlog  CL.write.1.tlog  SimFis.lastbuildstate  cl.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Properties/inc/: iup.h  iupcbs.h  iupcompat.h  iupcontrols.h  iupim.h  iupkey.h  iuptree.h  luacontrols.h
Properties/lib/: iup.lib  iupcontrols.lib  iupgl.lib  iupim.lib  iuplua.lib  iuplua5.lib  iupluaim.lib  iupluaim5.lib  iupole.lib  luacontrols.lib  luacontrols5.lib  luagl.lib  luagl5.lib
Release/: BuildLog.htm  vc70.idb
_UpgradeReport_Files/: Thumbs.db
docs/: Doxyfile
include/PhysicsSimulation/: cloth.h  constraint.h  cube.h  euler.h  forcegenerator.h  gravity.h  integrator.h  medium.h  particle.h  particlegenerator.h  plane.h  simulation.h  spring.h  vector.h  verlet.h
source/: cloth.cpp  constraint.cpp  cube.cpp  euler.cpp  forcegenerator.cpp  graphics.cpp  gravity.cpp  integrator.cpp  main.cpp  manipulator.cpp  medium.cpp  particle.cpp  particlegenerator.cpp  plane.cpp  simulation.cpp  spring.cpp  verlet.cpp
tests/: CMakeLists.txt  euler_integrator_test.cpp  fake_graphics.cpp  gravity_test.cpp  particle_test.cpp  particlegenerator_test.cpp  sample_test.cpp  spring_test.cpp  test_utils.h  vector_test.cpp  verlet_integrator_test.cpp
